Fix z-index problem with image slider in chrome

--- a/balehu.topmonks.com/src/stylesheets/main.scss
+++ b/balehu.topmonks.com/src/stylesheets/main.scss
@@ -63,6 +63,7 @@ section {
   &-slider {
     padding-left: 0;
     z-index: -1;
+    position: relative;
   }
 
   &-outer [data-action] {
